kubernetes/00_bootstrap/argocd/argocd-reloader-annotations-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: placeholder
spec:
  template:
    metadata:
      annotations:
        configmap.reloader.stakater.com/reload: "argocd-cmd-params-cm"
